<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsuario"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_saudadcao" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/FiapHeader"
    android:text="Dados do cliente" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNomeCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome do Cliente"
        />

</LinearLayout>

    <TextView
        android:id="@+id/tvPizza"
        style="@style/FiapHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_escolha_pizza"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <CheckBox
                android:id="@+id/cbAtum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:text="@string/txt_pizza_atum"
                />

            <CheckBox
                android:id="@+id/cbBacon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:text="@string/txt_pizza_bacom"
                />


         </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <CheckBox
                android:id="@+id/cbCalabresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:text="@string/txt_pizza_calabresa"
                />

            <CheckBox
                android:id="@+id/cbMussarela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:text="@string/txt_pizza_mussarela"/>

            </LinearLayout>
        </LinearLayout>

<TextView
    style="@style/FiapHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txt_tamanho_pizza" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rbTamanhoPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbPequena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_pizza_pequena" />


                <RadioButton
                    android:id="@+id/rbMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_pizza_media" />

                <RadioButton
                    android:id="@+id/rbGrande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_pizza_grande" />

            </RadioGroup>
        </LinearLayout>

            <TextView
                android:id="@+id/tvFormadePagamento"
                style="@style/FiapHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_forma_pagamento"
                />

            <Spinner
                android:id="@+id/spPagamentos"
                android:layout_gravity="center_horizontal"
                android:entries="@array/opcoes_pagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </Spinner>

       <Button
           android:id="@+id/btCalcular"
           android:layout_marginTop="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="calcular"
           android:text="@string/txt_calcular"
           />






    </LinearLayout>
</ScrollView>
